--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Fonts -->
     <style>
       body {
-        background: rgba(0, 0, 0, 0.4) url("img/background.png");
+        background: rgba(0, 0, 0, 0.7) url("img/background.png");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -42,7 +42,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Recipe Website</a>
+        <a class="navbar-brand" href="index.html">FoodGallery</a>
         <button
           class="navbar-toggler"
           data-bs-toggle="collapse"
