--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -7,29 +7,64 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="../css/recipe_html.css" />
-    <style></style>
+    <link rel="stylesheet" href="../css/recipe_html_styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fonts -->
     <script>
+      let recipesData;
+
       async function getData(data) {
         let my_obj = await fetch(data);
         let my_text = await my_obj.text();
-        let recipes = JSON.parse(my_text);
+        recipesData = JSON.parse(my_text);
+
+        let uniqueCategories = Array.from(
+          new Set(recipesData.map((recipe) => recipe.category))
+        );
+
+        let categoryDropdown = $("#categoryFilter");
+
+        uniqueCategories.forEach((category) => {
+          categoryDropdown.append(
+            `<option value="${category}">${category}</option>`
+          );
+        });
+
+        displayRecipes(recipesData);
+      }
+
+      function displayRecipes(recipes) {
+        $("#recipe_gallery").empty();
 
         for (let i = 0; i < recipes.length; i++) {
           let card =
-            '<div class="col-lg-3"><div class="card"><img src="../img/' +
+            '<div class="col-lg-4"><div class="card"><img src="../img/' +
             recipes[i].image +
             '" class="card-img-top" alt="' +
             recipes[i].name +
             '" /><div class="card-body"><h2>' +
             recipes[i].name +
-            '</h2><strong>Description: </strong><span id="description">' +
+            '</h2><p><strong>Description: </strong><span class="description">' +
             recipes[i].description +
             '</span><br /><strong>Cook Time: </strong><span id="cook_time">' +
             recipes[i].cookTime +
-            '</span><br /><a href="recipe-details.html"id=' +
+            '</span><br /><strong>Category: </strong><span class="category">' +
+            recipes[i].category +
+            '</span></p></div><div class="card-footer  text-center"><a href="recipe_details.html?id=' +
             recipes[i].id +
             '" class="btn btn-primary">View Recipe</a></div></div></div>';
           $("#recipe_gallery").append(card);
@@ -45,8 +80,12 @@
 
         recipeCards.each(function () {
           const recipeName = $(this).find("h2").text().toLowerCase();
+          const recipeCategory = $(this).find(".category").text().toLowerCase();
 
-          if (recipeName.includes(searchTerm)) {
+          if (
+            recipeName.includes(searchTerm) ||
+            recipeCategory.includes(searchTerm)
+          ) {
             $(this).show();
             found = true;
           } else {
@@ -54,20 +93,36 @@
           }
         });
 
-        if (!found) {
+        if (found == false) {
           $("#recipe_gallery").append(
-            '<div class="col"<p>No recipe found</p></div>'
+            "<div class='row'><div class='col-lg-6 offset-lg-3 text-center'><p>No recipe found</p></div></div>"
           );
         }
       }
+
+      function filterByCategory() {
+        const selectedCategory = $("#categoryFilter").val().toLowerCase();
+        let filteredRecipes;
+
+        if (selectedCategory) {
+          filteredRecipes = recipesData.filter(
+            (recipe) => recipe.category.toLowerCase() === selectedCategory
+          );
+        } else {
+          filteredRecipes = recipesData;
+        }
+
+        displayRecipes(filteredRecipes);
+      }
     </script>
+
     <title>Recipe</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Recipe Website</a>
+        <a class="navbar-brand" href="../index.html">FoodGallery</a>
         <button
           class="navbar-toggler"
           data-bs-toggle="collapse"
@@ -81,10 +136,10 @@
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" id="active" href="../index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" id="active" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
@@ -99,35 +154,45 @@
         </div>
       </div>
     </nav>
-    <!-- Navbar -->
-    <!-- Body -->
-    <h1 class="text-center mt-5 pt-5">Recipes</h1>
-    <div class="container my-5">
-      <div class="input-group">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Search for a recipe..."
-          id="searchInput"
-        />
-        <button
-          class="btn btn-outline-secondary"
-          type="button"
-          onclick="searchRecipes()"
-        >
-          Search
-        </button>
-      </div>
+    <!-- Navbar end -->
+    <div class="container-fluid">
+      <h1 class="page_header text-center mt-5 pt-5">
+        <a href="recipe.html" id="page_link">Recipes</a>
+      </h1>
     </div>
 
+    <div class="container my-4">
+      <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+          <div class="input-group">
+            <select
+              class="form-select"
+              id="categoryFilter"
+              onchange="filterByCategory()"
+            >
+              <option value="" selected>All Categories</option>
+            </select>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search for a recipe..."
+              id="searchInput"
+            />
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              onclick="searchRecipes()"
+              id="search-btn"
+            >
+              Search
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       <div class="row" id="recipe_gallery"></div>
     </div>
-    <!-- Body -->
-    <!-- Footer -->
-    <footer class="container-fluid">
-      <p>Copyright © MP2 Alrights Reserved.</p>
-    </footer>
-    <!-- Footer -->
+    <footer class="container-fluid"></footer>
   </body>
 </html>
