--- a/pages/recipe_details.html
+++ b/pages/recipe_details.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/recipe_html_styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -47,7 +48,7 @@
     />
   </head>
 
-  <body>
+  <body class="recipe-details">
     <div class="container mt-5">
       <div>
         <h1 class="text-center mb-4" id="recipe_name"></h1>
@@ -69,9 +70,14 @@
             <strong>Instructions: </strong
             ><span id="recipe_instructions"></span>
           </p>
-          <p>
+          <!-- <p>
             <strong>Tutorial: </strong><iframe id="recipe_tutorial"></iframe>
-          </p>
+          </p> -->
+        </div>
+        <div class="col-lg-6">
+          <div class="yt-container">
+            <iframe id="recipe_tutorial"></iframe>
+          </div>
         </div>
       </div>
     </div>
