modified index.html with animated close icon for button

--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -28,9 +28,16 @@
 
     <title>Recipe</title>
   </head>
-  <body>
+  <body class="recipe-details">
+    <!-- Close Button to go back to home page -->
+    <div class="close">
+      <a href="../index.html">
+        <div class="left"></div>
+        <div class="right"></div>
+      </a>
+    </div>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <!-- <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">FoodGallery</a>
         <button
@@ -49,7 +56,7 @@
               <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
@@ -63,7 +70,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- Navbar end -->
     <div class="container-fluid">
       <h1 class="page_header text-center mt-5 pt-5">
