--- a/index.html
+++ b/index.html
@@ -23,25 +23,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <!-- Fonts -->
-    <style>
-      body {
-        background: rgba(0, 0, 0, 0.7) url("img/background.png");
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-        background-blend-mode: darken;
-        height: 100vh;
-        color: white;
-      }
-    </style>
 
     <title>Home</title>
   </head>
   <body>
+    <div class="body-bg"></div>
     <!-- Nav Bar -->
+
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
+      <div class="navbar-bg"></div>
+      <div class="container-fluid nav-blur">
         <a class="navbar-brand" href="index.html">FoodGallery</a>
         <button
           class="navbar-toggler"
@@ -59,7 +50,7 @@
               <a class="nav-link" id="active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="pages/about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
@@ -89,6 +80,7 @@
             Moments Around the Table. Let's Dive into a World of Delicious
             Possibilities!"
           </p>
+          <br />
 
           <div class="text-center">
             <a href="pages/recipe.html" class="btn" id="view-recipe-btn"
@@ -100,7 +92,8 @@
     </div>
     <!-- Body end -->
     <!-- Footer -->
-    <footer class="container-fluid">
+    <footer>
+      <div class="footer-bg"></div>
       <p>Copyright © MP2 Alrights Reserved.</p>
     </footer>
   </body>
