--- a/pages/recipe_details.html
+++ b/pages/recipe_details.html
@@ -6,8 +6,23 @@
     <link rel="stylesheet" href="../css/recipe_html_styles.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fonts -->
 
     <script src="../js/recipe_details_html.js"></script>
+
     <title>Recipe Details</title>
     <link
       rel="stylesheet"
@@ -16,11 +31,17 @@
   </head>
 
   <body class="recipe-details">
+    <div class="close">
+      <a href="recipe.html">
+        <div class="left"></div>
+        <div class="right"></div>
+      </a>
+    </div>
     <div class="container mt-5">
       <div>
         <h1 class="text-center mb-4" id="recipe_name"></h1>
         <p>
-          <strong>Description: </strong><span id="recipe_description"></span>
+          <h5 id="recipe_description"></h5>
         </p>
         <p><strong>Cook Time: </strong><span id="recipe_cook_time"></span></p>
       </div>
@@ -48,5 +69,10 @@
         </div>
       </div>
     </div>
+    
+    <footer class="container-fluid">
+      <p>Copyright © MP2 Alrights Reserved.</p>
+      <div class="footer-bg"></div>
+    </footer>
   </body>
 </html>
