finish about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,80 +3,227 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- external JS -->
+    <!-- <script src="../js/observer.js"></script> -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- external CSS -->
+    <link rel="stylesheet" href="../css/pages.css" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+
     <title>About</title>
   </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <h3>About FoodGallery</h3>
+  <body id="about-page">
+    <!-- Nav Bar -->
+
+    <nav class="navbar navbar-expand-lg">
+      <div class="navbar-bg"></div>
+      <div class="container-fluid nav-blur">
+        <a class="navbar-brand" href="../index.html">FoodGallery</a>
+        <button
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#site_navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end me-3"
+          id="site_navbar"
+        >
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="active" href="pages/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="events.html">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Nav Bar end -->
+
+    <div class="abt">
+      <h1 class="text-center">About Us</h1>
+      <div class="sentence">
+        <p>
           Welcome to FoodGallery, where passion for food meets the art of
           cooking! We are thrilled to have you join our culinary journey,
           exploring the world of delicious recipes and culinary inspiration.
+        </p>
+      </div>
+      <div id="earth-container">
+        <div id="pan-rotation">
+          <img class="pan" src="../img/pan.png" alt="pan-image-rotation" />
+        </div>
+        <img class="earth" src="../img/earth.png" alt="earth-image" />
+        <h5>Delicious</h5>
+      </div>
+    </div>
 
-          <h3>Our Story</h3>
-          At FoodGallery, we believe that cooking is more than just a task –
-          it's an art form that brings people together, creating memorable
+    <div class="abt">
+      <div class="sentence">
+        <h3>Our Story</h3>
+        <p>
+          At FoodGallery, we believe that cooking is more than just a task it's
+          an art form that brings people together, creating memorable
           experiences and fostering a sense of community. Our story began with a
           shared love for good food and the desire to make cooking accessible,
           enjoyable, and exciting for everyone.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/story.png" alt="story begin picture" />
+      </div>
+    </div>
 
-          <h3>Our Mission</h3>
-          <h4>Empowering Home Cooks:</h4>
+    <div class="abt">
+      <div class="sentence">
+        <h3>Empowering Home Cooks</h3>
+        <p>
           We are on a mission to empower home cooks of all skill levels to
           unleash their creativity in the kitchen. Whether you're a seasoned
           chef or a kitchen novice, FoodGallery is here to inspire and guide you
           on your culinary adventures.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/empowering.png" alt="drawing of a empowering chef" />
+      </div>
+    </div>
 
-          <h4>Curated Culinary Delights:</h4>
+    <!-- 4 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>Curated Culinary Delights</h3>
+        <p>
           Our team of passionate food enthusiasts scours the globe to bring you
           a curated collection of mouthwatering recipes. From classic comfort
           food to innovative culinary creations, we've got something for every
           palate.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/curated.png" alt="drawing of a person thinking" />
+      </div>
+    </div>
 
-          <h4>Celebrating Diversity:</h4>
+    <!-- 5 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>Celebrating Diversity</h3>
+        <p>
           Food is a universal language that transcends borders and cultures. At
           FoodGallery, we celebrate the rich diversity of cuisines from around
           the world, encouraging you to explore new flavors and expand your
           culinary horizons.
-        </div>
+        </p>
+      </div>
+      <div class="abt-image">
+        <img
+          src="../img/friends.png"
+          alt="drawing of cheering group of people"
+        />
+      </div>
+    </div>
 
-        <div class="col-lg-6">
-          <h3>What Sets Us Apart</h3>
+    <!-- 6 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>What Sets Us Apart</h3>
+        <p>
           Expertly Curated Recipes: Each recipe on FoodGallery is carefully
           curated, tested, and presented with step-by-step instructions and
           beautiful imagery. We believe that the visual appeal of a dish is as
           important as its taste.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/apart.png" alt="drawing of delicious foods" />
+      </div>
+    </div>
 
-          <h4>Community Engagement:</h4>
+    <!-- 7 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>Community Engagement</h3>
+        <p>
           Join our vibrant community of food lovers! Share your culinary
           creations, exchange tips and tricks, and connect with like-minded
           individuals who share your passion for cooking.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/network.png" alt="picture of networking" />
+      </div>
+    </div>
 
-          <h4>Innovation and Inspiration:</h4>
+    <!-- 8 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>Innovation and Inspiration</h3>
+        <p>
           Stay up-to-date with the latest culinary trends, cooking techniques,
           and kitchen gadgets. FoodGallery is not just a recipe website – it's a
           source of inspiration for your culinary adventures.
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/inspired.png" alt="drawing of inspired person" />
+      </div>
+    </div>
 
-          <h3>Meet the Team</h3>
+    <!-- 9 -->
+    <div class="abt">
+      <div class="sentence">
+        <h3>Meet the Team</h3>
+        <p>
           FoodGallery is fueled by a team of dedicated individuals who are as
           passionate about food as you are. Meet the faces behind the scenes,
           from our experienced chefs to our creative content creators.
-
-          <h3>Contact Us</h3>
-          Have a question, suggestion, or just want to say hello? We'd love to
-          hear from you! Reach out to us through our
-          <a href="">Contact Page </a>or connect with us on social media. Thank
-          you for being a part of the FoodGallery family. Let's cook, create,
-          and savor the flavors of life together!
-        </div>
+        </p>
+      </div>
+      <div class="abt-image">
+        <img src="../img/foodgalleryteam.png" alt="FoodGallery Team" />
       </div>
     </div>
+
+    <footer>
+      <p>Copyright © MP2 Alrights Reserved.</p>
+      <div class="footer-bg"></div>
+    </footer>
+
+    <script src="../js/observer.js"></script>
   </body>
 </html>
