--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -73,7 +73,7 @@
     </nav> -->
     <!-- Navbar end -->
     <div class="container-fluid">
-      <h1 class="page_header text-center mt-5 pt-5">
+      <h1 class="page_header text-center pt-5">
         <a href="recipe.html" id="page_link">Recipes</a>
       </h1>
     </div>
