--- a/pages/recipe_details.html
+++ b/pages/recipe_details.html
@@ -47,9 +47,6 @@
       </div>
 
       <div class="row">
-        <!-- <div class="col-lg-6">
-          <img id="recipe_image" class="img-fluid mb-4" alt="Recipe Image" />
-        </div> -->
         <div class="col-lg-6">
           <p>
             <strong>Ingredients: </strong><span id="recipe_ingredients"></span>
@@ -58,9 +55,6 @@
             <strong>Instructions: </strong
             ><span id="recipe_instructions"></span>
           </p>
-          <!-- <p>
-            <strong>Tutorial: </strong><iframe id="recipe_tutorial"></iframe>
-          </p> -->
         </div>
         <div class="col-lg-6">
           <div class="yt-container">
@@ -70,9 +64,9 @@
       </div>
     </div>
     
-    <footer class="container-fluid">
-      <p>Copyright © MP2 Alrights Reserved.</p>
+    <footer class="mt-5">
       <div class="footer-bg"></div>
+      <p>Copyright © MP2 Alrights Reserved.</p>
     </footer>
   </body>
 </html>
