--- a/pages/events.html
+++ b/pages/events.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- external JS -->
+    <!-- <script src="../js/observer.js"></script> -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/home_styles.css" />
+
+    <!-- external CSS -->
+    <link rel="stylesheet" href="../css/pages.css" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,16 +31,15 @@
       rel="stylesheet"
     />
 
-    <title>Home</title>
+    <title>About</title>
   </head>
-  <body id="home-page">
-    <div class="body-bg"></div>
+  <body id="about-page">
     <!-- Nav Bar -->
 
     <nav class="navbar navbar-expand-lg">
       <div class="navbar-bg"></div>
       <div class="container-fluid nav-blur">
-        <a class="navbar-brand" href="index.html">FoodGallery</a>
+        <a class="navbar-brand" href="../index.html">FoodGallery</a>
         <button
           class="navbar-toggler"
           data-bs-toggle="collapse"
@@ -47,54 +53,51 @@
         >
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" id="active" href="index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/events.html">Events</a>
+              <a class="nav-link" id="active" href="events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/blog.html">Blog</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
     <!-- Nav Bar end -->
-    <!-- Body -->
-    <div class="container-fluid" id="home-body">
-      <div class="row">
-        <div class="col-lg-5 offset-lg-6">
-          <h1 id="home-header" class="display-4 text-center">
-            Discover Culinary Magic
-          </h1>
 
-          <p id="p-home">
-            "Welcome to a Culinary Journey: Where Every Recipe Tells a Story.
-            Discover the Art of Flavor, Unleash Your Inner Chef, and Savor
-            Moments Around the Table. Let's Dive into a World of Delicious
-            Possibilities!"
-          </p>
-          <br />
-
-          <div class="text-center">
-            <a href="pages/recipe.html" class="btn" id="view-recipe-btn"
-              >View Recipes</a
-            >
-          </div>
-        </div>
+    <div class="upper-bg">
+      <div class="img"><div class="darken"></div></div>
+      <div class="banner-text">
+        <h1>Upcoming Event</h1>
+        <h3>Global Fusion Night</h3>
+        <div class="underline m-3"></div>
+        <h5>January 24 - 26, 2024</h5>
+        <p>Royal Mandaya Hotel, Palma Gil St., Davao City, Philippines</p>
+      </div>
+      <div class="event-btn">
+        <button class="btn btn-primary">Register Now</button>
       </div>
     </div>
-    <!-- Body end -->
-    <!-- Footer -->
-    <footer>
-      <div class="footer-bg"></div>
-      <p>Copyright © MP2 Alrights Reserved.</p>
-    </footer>
+
+    <div class="event-content mt-5">
+      <div class="container">
+        <h5>
+          Join us for an unforgettable evening of culinary exploration! "Global
+          Fusion Night" is a celebration of diverse flavors, bringing together
+          the best of international cuisines right to your kitchen. Mark your
+          calendars for a night of taste bud tantalization and cultural
+          immersion.
+        </h5>
+      </div>
+    </div>
   </body>
 </html>
