Finished event page

--- a/pages/events.html
+++ b/pages/events.html
@@ -74,30 +74,160 @@
 
     <!-- Nav Bar end -->
 
-    <div class="upper-bg">
-      <div class="img"><div class="darken"></div></div>
-      <div class="banner-text">
-        <h1>Upcoming Event</h1>
-        <h3>Global Fusion Night</h3>
-        <div class="underline m-3"></div>
-        <h5>January 24 - 26, 2024</h5>
-        <p>Royal Mandaya Hotel, Palma Gil St., Davao City, Philippines</p>
-      </div>
-      <div class="event-btn">
-        <button class="btn btn-primary">Register Now</button>
-      </div>
-    </div>
+    <div class="event-section">
+      <div class="upper-bg">
+        <div class="img"><div class="darken"></div></div>
+        <div class="banner-text">
+          <h1>Upcoming Event</h1>
+          <h3>Global Fusion Night</h3>
+          <div class="underline m-3"></div>
+          <h5>January 24 - 26, 2024</h5>
+          <p>Royal Mandaya Hotel, Palma Gil St., Davao City, Philippines</p>
+        </div>
+        <div class="event-btn">
+          <!-- <button class="btn btn-primary">Register Now</button> -->
 
-    <div class="event-content mt-5">
-      <div class="container">
-        <h5>
-          Join us for an unforgettable evening of culinary exploration! "Global
-          Fusion Night" is a celebration of diverse flavors, bringing together
-          the best of international cuisines right to your kitchen. Mark your
-          calendars for a night of taste bud tantalization and cultural
-          immersion.
-        </h5>
+          <button
+            type="button"
+            class="btn"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            data-bs-whatever="@getbootstrap"
+            id="reg-btn"
+          >
+            Register
+          </button>
+
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">
+                    Registration
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="mb-3 text-start">
+                      <label for="recipient-name" class="col-form-label"
+                        >email</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="recipient-name"
+                      />
+                    </div>
+                    <div class="mb-3 text-start">
+                      <label for="message-text" class="col-form-label"
+                        >full name</label
+                      >
+                      <input
+                      type="text"
+                        class="form-control"
+                        id="message-text"
+                      ></input>
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-secondary"
+                    data-bs-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                  <button type="button" class="btn btn-primary">
+                    Register
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <div class="event-content">
+        <div class="container mb-5">
+          <h5>
+            Join us for an unforgettable evening of culinary exploration!
+            "Global Fusion Night" is a celebration of diverse flavors, bringing
+            together the best of international cuisines right to your kitchen.
+            Mark your calendars for a night of taste bud tantalization and
+            cultural immersion.
+          </h5>
+
+          <h4 class="mt-3">Event Highlights:</h4>
+          <ol>
+            <li>
+              Live Cooking Demos: Renowned chefs will take center stage to
+              demonstrate the art of creating signature dishes from around the
+              world. Get ready to pick up insider tips and tricks that will
+              elevate your home cooking game.
+            </li>
+            <li>
+              Tasting Stations: Embark on a flavor-filled journey with tasting
+              stations featuring dishes from Asia, Europe, the Americas, and
+              beyond. Sample a smorgasbord of global delights prepared by our
+              expert culinary team.
+            </li>
+            <li>
+              Interactive Workshops: Dive deep into the intricacies of specific
+              cuisines with our interactive workshops. From mastering the art of
+              sushi rolling to perfecting the balance of spices in Indian
+              cuisine, there's something for every aspiring chef.
+            </li>
+            <li>
+              Q&A Sessions: Have burning culinary questions? Our panel of chefs
+              and food enthusiasts will be ready to answer all your queries.
+              Whether you're a kitchen rookie or a seasoned pro, there's always
+              something new to learn.
+            </li>
+          </ol>
+
+          <h4 class="mt-3">How to Participate:</h4>
+          <ol>
+            <li>
+              RSVP: Secure your spot by registering for the event. Limited slots
+              available, so don't miss out on this culinary adventure.
+            </li>
+            <li>
+              Spread the Word: Share the excitement with your friends and
+              family. The more, the merrier!
+            </li>
+            <li>
+              Prepare Your Kitchen: Get ready to cook along with our live demos
+              or simply sit back, relax, and enjoy the show.
+            </li>
+          </ol>
+
+          <h6>
+            Don't miss this opportunity to broaden your culinary horizons and
+            connect with food enthusiasts from around the globe. "Global Fusion
+            Night" promises to be a feast for the senses, and we can't wait to
+            share this culinary journey with you! Stay tuned for more updates on
+            upcoming events and culinary experiences. Cheers to a world of
+            flavors!
+          </h6>
+        </div>
+      </div>
+      <footer>
+        <p>Copyright © MP2 Alrights Reserved.</p>
+        <div class="footer-bg"></div>
+      </footer>
     </div>
   </body>
 </html>
