added minor css

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -103,9 +103,15 @@
               </div>
             </div>
             <div class="bottom-left mt-5">
-              <img src="../img/fb-icon.svg" alt="" />
-              <img src="../img/messenger-icon.svg" alt="" />
-              <img src="../img/twitter-icon.svg" alt="" />
+              <a href="https://www.facebook.com/"
+                ><img src="../img/fb-icon.svg" alt=""
+              /></a>
+              <a href="https://www.messenger.com/"
+                ><img src="../img/messenger-icon.svg" alt=""
+              /></a>
+              <a href="https://twitter.com/"
+                ><img src="../img/twitter-icon.svg" alt=""
+              /></a>
             </div>
           </div>
           <div class="col-lg-6">
@@ -130,7 +136,7 @@
               ></textarea>
             </div>
             <div class="d-flex justify-content-end mb-5">
-              <button class="btn btn-primary">Send</button>
+              <button class="btn btn-primary" id="send-btn">Send</button>
             </div>
           </div>
           <footer>
