--- a/pages/events.html
+++ b/pages/events.html
@@ -155,6 +155,7 @@
                     type="button"
                     class="btn btn-primary"
                     onclick="signUp()"
+                    id="sign-up"
                   >
                     Register
                   </button>
