--- a/pages/blog.html
+++ b/pages/blog.html
@@ -30,8 +30,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
 
-    <title>About</title>
+    <title>Blog</title>
   </head>
   <body>
     <!-- Nav Bar -->
