--- a/pages/events.html
+++ b/pages/events.html
@@ -30,9 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
     <script src="../js/events_html.js"></script>
 
-    <title>About</title>
+    <title>Events</title>
   </head>
   <body id="about-page">
     <!-- Nav Bar -->
