--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -23,10 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
-    <!-- Fonts -->
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
     <script src="../js/recipe_html.js"></script>
 
-    <title>Recipe</title>
+    <title>Recipes</title>
   </head>
   <body class="recipe-details">
     <!-- Close Button to go back to home page -->
