--- a/pages/recipe_details.html
+++ b/pages/recipe_details.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <!-- Fonts -->
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
 
     <script src="../js/recipe_details_html.js"></script>
 
@@ -40,9 +41,7 @@
     <div class="container mt-5">
       <div>
         <h1 class="text-center mb-4" id="recipe_name"></h1>
-        <p>
-          <h5 id="recipe_description"></h5>
-        </p>
+        <h5 id="recipe_description"></h5>
         <p><strong>Cook Time: </strong><span id="recipe_cook_time"></span></p>
       </div>
 
@@ -63,7 +62,7 @@
         </div>
       </div>
     </div>
-    
+
     <footer class="mt-5">
       <div class="footer-bg"></div>
       <p>Copyright © MP2 Alrights Reserved.</p>
