--- a/pages/about.html
+++ b/pages/about.html
@@ -30,6 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
 
     <title>About</title>
   </head>
