--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,8 +36,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="../img/logo.png" type="image/x-icon" />
 
-    <title>About</title>
+    <title>Contact</title>
   </head>
   <body class="contact">
     <div class="dark-bg"></div>
