--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/home_styles.css" />
+    <script src="js/navbar.js"></script>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,7 +31,7 @@
     <div class="body-bg"></div>
     <!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-sm">
       <div class="navbar-bg"></div>
       <div class="container-fluid nav-blur">
         <a class="navbar-brand" href="index.html">FoodGallery</a>
@@ -38,8 +39,13 @@
           class="navbar-toggler"
           data-bs-toggle="collapse"
           data-bs-target="#site_navbar"
+          id="nv-tog"
         >
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- <div id="tog-icon"></div> -->
+          <div class="top"></div>
+          <div class="middle"></div>
+          <div class="bottom"></div>
         </button>
         <div
           class="collapse navbar-collapse justify-content-end me-3"
