--- a/pages/events.html
+++ b/pages/events.html
@@ -14,6 +14,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="../js/navbar.js"></script>
+
     <!-- external CSS -->
     <link rel="stylesheet" href="../css/pages.css" />
 
@@ -36,16 +38,21 @@
   <body id="about-page">
     <!-- Nav Bar -->
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-sm">
       <div class="navbar-bg"></div>
       <div class="container-fluid nav-blur">
-        <a class="navbar-brand" href="../index.html">FoodGallery</a>
+        <a class="navbar-brand" href="index.html">FoodGallery</a>
         <button
           class="navbar-toggler"
           data-bs-toggle="collapse"
           data-bs-target="#site_navbar"
+          id="nv-tog"
         >
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- <div id="tog-icon"></div> -->
+          <div class="top"></div>
+          <div class="middle"></div>
+          <div class="bottom"></div>
         </button>
         <div
           class="collapse navbar-collapse justify-content-end me-3"
@@ -71,7 +78,6 @@
         </div>
       </div>
     </nav>
-
     <!-- Nav Bar end -->
 
     <div class="event-section">
@@ -80,7 +86,7 @@
         <div class="banner-text">
           <h1>Upcoming Event</h1>
           <h3>Global Fusion Night</h3>
-          <div class="underline m-3"></div>
+          <div class="underline"></div>
           <h5>January 24 - 26, 2024</h5>
           <p>Royal Mandaya Hotel, Palma Gil St., Davao City, Philippines</p>
         </div>
@@ -95,7 +101,7 @@
             data-bs-whatever="@getbootstrap"
             id="reg-btn"
           >
-            Register
+            Register Now
           </button>
 
           <div
