--- a/pages/recipe_details.html
+++ b/pages/recipe_details.html
@@ -46,7 +46,7 @@
         <p><strong>Cook Time: </strong><span id="recipe_cook_time"></span></p>
       </div>
 
-      <div class="row">
+      <div class="row flex-column-reverse flex-lg-row">
         <div class="col-lg-6">
           <p>
             <strong>Ingredients: </strong><span id="recipe_ingredients"></span>
